--- a/popup.html
+++ b/popup.html
@@ -97,6 +97,12 @@
               Show URLs under titles
             </label>
           </div>
+          <div class="setting-item">
+            <label>
+              <input type="checkbox" id="useThumbnails" />
+              Use website thumbnails instead of favicons
+            </label>
+          </div>
         </div>
         <div class="modal-buttons">
           <button id="saveSettingsBtn">Save</button>
